dtext: fix CSS not being applied to span.prose elements.
Fixes emojis appearing too large in certain contexts, such as flags, appeals, and disapproval reasons.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -1,4 +1,4 @@
-div.prose {
+.prose {
   --max-sticker-size: 64px;
   --max-emoji-size: 24px;
 
